# migrids-lite

./: .gitignore  LICENSING.md  README.md  pyproject.toml  requirements.txt
src/examples/: bed_testing.py  compare_scenarios.ipynb  compare_scenarios.py  diesel_only.ipynb  diesel_only.py  example_data.tab  resource_offset.ipynb  resource_offset.py  testbed.py  time_shifting.ipynb  time_shifting.py
src/examples/.ipynb_checkpoints/: compare_scenarios-checkpoint.ipynb  time_shifting-checkpoint.ipynb
src/migrids_lite/: EnergyInputs.py  EnergyType.py  Generator.py  OpParams.py  Powerhouse.py  SrcLimits.py  System.py  TankFarm.py  Timeshifting.py  __init__.py
src/migrids_lite/.ipynb_checkpoints/: Storage-checkpoint.py
src/tests/: test_multi_gen.py  test_single_gen.py
