[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "migrids_lite"
dynamic = ["version"]
dependencies = ["pandas~=2.2",
                "scipy~=1.14",
		"jupyter~=1.1",
		"matplotlib~=3.10"]
requires-python = ">= 3.12"
description = "MiGRIDS Lite is a simple hourly energy balance modeling tool that integrates a renewable energy source along with diesel generator and storage considerations."
author = [
	{name = "Bax Bond", email = "bwbond@alaska.edu"}
]
license = "AGPL-3.0-only"
[tool.hatch.version]
path = "src/migrids_lite/__init__.py"
